--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 cycler==0.10.0
+dataclasses==0.8
 imageio==2.9.0
 kiwisolver==1.3.1
 matplotlib==3.3.4
@@ -11,4 +12,5 @@ python-dateutil==2.8.2
 six==1.16.0
 torch==1.9.1
 torchvision==0.10.1
+tqdm==4.62.3
 typing-extensions==3.10.0.2
