--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ src/models/
 src/pcl_results/
 src/multiscene_results/
 
+occupancy_network/build
+occupancy_network/external
+
 *.json
 *.npy
 *.urdf
