--- a/occupancy_networks/configs/pointcloud/onet.yaml
+++ b/occupancy_networks/configs/pointcloud/onet.yaml
@@ -1,7 +1,7 @@
 method: onet
 data:
   input_type: pointcloud
-  path: data/pcl
+  path: data/ShapeNet
   pointcloud_n: 300
   pointcloud_noise: 0.005
   points_subsample: 2048 
